--- a/client/index.html
+++ b/client/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/materialize-css/dist/css/materialize.min.css">
+  <meta charset="UTF-8">
+  <title>Real-time tracking prototype with websockets</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="node_modules/materialize-css/dist/css/materialize.min.css">
 </head>
+
 <body>
 
-<div class="map"></div>
-<button class="btn startInsert">Start inserting data</button>
-<button class="btn deleteData">Delete data</button>
+  <div class="row">
+    <div class="map col s6"></div>
 
-<table class="bordered striped">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>lat</th>
-        <th>long</th>
-    </tr>
-    </thead>
+    <div class="col s6">
+      <div class="col s12">
+        <button class="btn startInsert">Start inserting data</button>
+        <button class="btn deleteData">Delete data</button>
+      </div>
 
-    <tbody>
-    </tbody>
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/materialize-css/dist/js/materialize.js"></script>
-    <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
-<script src="map.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEH43Unag1nRoqq2v4aiYAfAjOCJ_Q2ig&callback=initMap"
-        async defer></script>
+      <table class="bordered striped col s12">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Latitude</th>
+            <th>Longitude</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/materialize-css/dist/js/materialize.js"></script>
+  <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
+  <script src="map.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEH43Unag1nRoqq2v4aiYAfAjOCJ_Q2ig&callback=initMap" async defer></script>
 </body>
 
 </html>
