--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
   <script src="node_modules/materialize-css/dist/js/materialize.js"></script>
   <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
   <script src="map.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEH43Unag1nRoqq2v4aiYAfAjOCJ_Q2ig&callback=initMap" async defer></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEH43Unag1nRoqq2v4aiYAfAjOCJ_Q2ig&callback=initMap"></script>
 </body>
 
 </html>
