--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="map col s6"></div>
 
-    <div class="col s6">
+    <div class="col s6 right-block">
       <div class="col s12">
         <button class="btn startInsert">Start inserting data</button>
         <button class="btn deleteData">Delete data</button>
