Change console logs

--- a/client/index.html
+++ b/client/index.html
@@ -12,13 +12,13 @@
 
 <div class="row">
 
-    <div class="col s6 left-block">
+    <div class="col s12 m6 left-block">
 
         <div class="card-panel map">
         </div>
     </div>
 
-    <div class="col s6 right-block">
+    <div class="col s12 m6 right-block">
         <div class="row">
             <div class="card">
                 <div class="card-content">
