--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <title>Real-time tracking prototype with websockets</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="node_modules/materialize-css/dist/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -17,26 +18,20 @@
         <div class="card-panel map">
         </div>
     </div>
-
+    <!--pause_circle_outline-->
     <div class="col s12 m6 right-block">
-        <div class="row">
-            <div class="card">
-                <div class="card-content">
-                    <span class="card-title center-align">Commandes serveur / Postgres</span>
+        <div class="col s12">
+            <div class="collection with-header z-depth-1">
+                <li class="collection-header"><h5>Commandes serveur / Postgres</h5></li>
+                <li class="collection-header"><h6>Positions</h6></li>
+                <li class="collection-item startInsert"><div>Démarrer l'insertion<a href="#!" class="secondary-content"><i class="material-icons">play_circle_outline</i></a></div></li>
+                <li class="collection-item stopInsert"><div>Arréter l'insertion<a href="#!" class="secondary-content"><i class="material-icons">pause_circle_outline</i></a></div></li>
 
-                </div>
-                <div class="card-action">
-                    <div class="row">
-                        <button class="waves-effect waves-light btn startInsert center-align">Insertion des positions</button>
-                    </div>
-                    <div class="row">
-                        <button class="waves-effect waves-light btn deleteData center-align">Suppression des positions</button>
-                    </div>
-                </div>
+                <li class="collection-item deleteData"><div>Suppression<a href="#!" class="secondary-content"><i class="material-icons">clear</i></a></div></li>
             </div>
-
         </div>
-        <div class="row">
+
+        <div class="col s12">
             <div class="card table-card">
                 <div class="card-content">
                     <span class="card-title center-align">Positions reçues</span>
